[package]
name="web3spider"
version="0.1.0"
edition="2021"

[dependencies]
spider = {path="./spider", version="1.10.1"}
env_logger = "0.9.0"
serde_json = "1.0.82"
ipfs-api-backend-hyper = "0.4"
ipfs-api = "0.15.0"
futures = "0.3"
actix-rt                  = { version = "2.6", optional = true }
tokio                     = { version = "1", features = ["time"] }
tokio-stream              = { version = "0.1", features = ["time"] }
tracing-subscriber        = { version = "0.3", features = ["fmt"] }
actix-web = "4"
threadpool = "1.0"
